--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ requests==2.25.1
 tqdm==4.59.0
 colorama==0.4.4
 pandas
-numpy
+tensorflow==2.11.0
 scikit_learn==1.0
 keras==2.6.0
 tensorflow==2.6.0
